<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginHorizontal="10dp"
    android:layout_marginTop="15dp">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/product_img"
        android:layout_width="match_parent"
        android:layout_height="@dimen/productHeight"
        android:scaleType="centerCrop"
        android:src="@drawable/samsung_phone" />

        <ImageView
            android:id="@+id/wishlist_heart"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/wishlist_heart"
            android:layout_gravity="end"
            android:layout_margin="10dp"
            />
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:id="@+id/product_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/phone_title"
        android:textSize="@dimen/productName"
        android:fontFamily="@font/sans_medium"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/mrp_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mrp"
            android:textColor="#000000"
            android:textSize="@dimen/productMrp_and_dealPrice"
            android:fontFamily="@font/sans_medium"/>

        <TextView
            android:id="@+id/deal_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deal_price"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:textSize="@dimen/productMrp_and_dealPrice"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/sans_medium"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/discount_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disc_25_percent"
            android:textColor="@color/red"
            android:textSize="@dimen/discPercent"
            android:fontFamily="@font/sans_medium"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="12dp"/>


</LinearLayout>