<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--    Header-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/red"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingHorizontal="25dp"
            >
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">
                <ImageView
                    android:id="@+id/menuIcon"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/menu_icon" />

                <ImageView
                    android:id="@+id/backIcon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/back_icon"
                    android:visibility="gone"/>
            </FrameLayout>

            <TextView
                android:id="@+id/pageTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginStart="15dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end">
                <ImageView
                    android:id="@+id/dealsIcon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/deals_icon"
                    android:visibility="visible"/>

                <ImageView
                    android:id="@+id/notificationIcon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/notification_icon"
                    android:layout_marginStart="25dp"
                    android:visibility="visible"/>

                <ImageView
                    android:id="@+id/cartIconTop"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/cart_icon"
                    android:layout_marginStart="25dp"
                    android:visibility="visible"/>
            </LinearLayout>
        </LinearLayout>


        <!--    Header ends here-->

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>


    <!-- Footer starts here-->

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/red"
        android:orientation="horizontal"
        android:weightSum="5"
        android:gravity="center"
        android:baselineAligned="false">
        <LinearLayout
            android:id="@+id/homeIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/home_img"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:src="@drawable/home_icon_hollow"
                android:layout_marginBottom="5dp"
                app:tint="@color/white" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:textSize="15sp"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:fontFamily="@font/sans_medium"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bookingIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/booking_img"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:src="@drawable/booking_icon_hollow"
                app:tint="@color/white"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/booking"
                android:textSize="15sp"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:fontFamily="@font/sans_medium"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/categoryIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/category_img"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:src="@drawable/category_icon_hollow"
                app:tint="@color/white"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textSize="15sp"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:fontFamily="@font/sans_medium"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/wishlistIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/wishlist_img"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:src="@drawable/wishlist_icon_hollow"
                app:tint="@color/white"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wishlist"
                android:textSize="15sp"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:fontFamily="@font/sans_medium"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/settingsIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/settings_img"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:src="@drawable/settings_icon_hollow"
                app:tint="@color/white"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:textSize="15sp"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:fontFamily="@font/sans_medium"/>
        </LinearLayout>

    </LinearLayout>
    </LinearLayout>

    <!-- Side menu drawer-->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true">

        <include
            android:id="@+id/menuOption"
            layout="@layout/side_menu"
            />

    </com.google.android.material.navigation.NavigationView>


</androidx.drawerlayout.widget.DrawerLayout>